[gd_scene load_steps=21 format=2]

[ext_resource path="res://Game/Scenes/Ground/Ground.gd" type="Script" id=1]
[ext_resource path="res://Game/Scenes/GroundObjects/AnimateObjects/Robot/Robot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/PlaceholderSprites/Tiles/Yellow.png" type="Texture" id=3]
[ext_resource path="res://Game/Scenes/GroundObjects/AnimateObjects/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/PlaceholderSprites/Tiles/Green.png" type="Texture" id=5]
[ext_resource path="res://Game/Scenes/Ground/GroundTiles/Break/BreakIcon.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/PlaceholderSprites/Tiles/Red.png" type="Texture" id=7]
[ext_resource path="res://Game/PlaceholderSprites/Tiles/Blue.png" type="Texture" id=8]
[ext_resource path="res://Game/Scenes/Ground/GroundTiles/DanceFloor/DanceFloorTile.tscn" type="PackedScene" id=9]
[ext_resource path="res://Game/Scenes/Ground/BreakTileSet.png" type="Texture" id=10]
[ext_resource path="res://Game/Scenes/Ground/GroundTiles/Break/BreakTile.tscn" type="PackedScene" id=11]
[ext_resource path="res://Game/Scenes/Ground/Floor.png" type="Texture" id=12]
[ext_resource path="res://Game/Scenes/Ground/BreakBuildingTileSet.png" type="Texture" id=13]
[ext_resource path="res://Game/Scenes/Ground/GroundTiles/DanceFloor/ExitTile/ExitTile.tscn" type="PackedScene" id=14]
[ext_resource path="res://Game/Scenes/Ground/Exit.png" type="Texture" id=15]
[ext_resource path="res://Game/Scenes/Sound.tscn" type="PackedScene" id=16]
[ext_resource path="res://Game/Scenes/Ground/cheer.wav" type="AudioStream" id=17]
[ext_resource path="res://Game/Scenes/Ground/undo.ogg" type="AudioStream" id=18]
[ext_resource path="res://Game/Scenes/Ground/level_complete.ogg" type="AudioStream" id=19]

[sub_resource type="TileSet" id=1]
0/name = "BasicBreak"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Green.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
3/name = "Red.png 3"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Yellow.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Break"
5/texture = ExtResource( 10 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 400, 500 )
5/tile_mode = 1
5/autotile/bitmask_mode = 1
5/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 4 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 4 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 4 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 4 ), 16 ]
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 100, 100 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
7/name = "DanceFloor"
7/texture = ExtResource( 12 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( -5, -5, 100, 100 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Break Right"
8/texture = ExtResource( 13 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 100, 100 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Break Down"
9/texture = ExtResource( 13 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 100, 0, 100, 100 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Break Blank"
10/texture = ExtResource( 13 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 200, 0, 100, 100 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Break Up"
11/texture = ExtResource( 13 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 100, 100, 100 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Break Left"
12/texture = ExtResource( 13 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 100, 100, 100, 100 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "Break Clock"
13/texture = ExtResource( 13 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 200, 100, 100, 100 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "Exit"
14/texture = ExtResource( 15 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 100, 100 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0

[node name="Ground" type="TileMap"]
tile_set = SubResource( 1 )
cell_size = Vector2( 100, 100 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -131076, 2, 0, -131075, 2, 0, -131074, 2, 0, -131073, 2, 0, -196608, 2, 0, -65540, 2, 0, -65539, 2, 0, -65538, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 2, 0, -131070, 2, 0, -131069, 2, 0, -5, 2, 0, -4, 2, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, 65529, 2, 0, 65530, 2, 0, 65531, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 131068, 2, 0, 131069, 2, 0, 131070, 2, 0, 131071, 2, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 2, 0, 196605, 2, 0, 196606, 2, 0, 196607, 2, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 262142, 2, 0, 262143, 2, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196614, 6, 0, 327679, 2, 0, 262144, 2, 0, 262147, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0 )
script = ExtResource( 1 )
dance_floor_scene = ExtResource( 9 )
break_scene = ExtResource( 11 )
exit_scene = ExtResource( 14 )
break_icon_scene = ExtResource( 6 )

[node name="Ground" type="Node2D" parent="."]

[node name="Objects" type="Node2D" parent="."]

[node name="Robot" parent="Objects" instance=ExtResource( 2 )]
position = Vector2( 223, 164 )

[node name="Player" parent="Objects" instance=ExtResource( 4 )]
position = Vector2( 101, 162 )

[node name="EndLevelTimer" type="Timer" parent="."]

[node name="LevelCompleteTimer" type="Timer" parent="."]
one_shot = true

[node name="Sound" parent="." instance=ExtResource( 16 )]

[node name="Cheer" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 17 )
bus = "SFX"

[node name="LevelComplete" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 19 )
bus = "SFX"

[node name="Undo" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 18 )
bus = "SFX"

[connection signal="is_dancing_updated" from="Objects/Robot" to="." method="_on_Robot_is_dancing_updated"]
[connection signal="timeout" from="EndLevelTimer" to="." method="_on_EndLevelTimer_timeout"]
[connection signal="timeout" from="LevelCompleteTimer" to="." method="_on_LevelCompleteTimer_timeout"]
